# caffe-android-demo

./: .gitignore  local.properties
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/android_lib/caffe/share/Caffe/: CaffeConfig.cmake  CaffeTargets-release.cmake
app/src/main/cpp/android_lib/glog/include/glog/: config.h
app/src/main/cpp/android_lib/glog/lib/cmake/glog/: glog-targets.cmake
app/src/main/cpp/android_lib/openblas/lib/cmake/openblas/: OpenBLASConfig.cmake
app/src/main/cpp/android_lib/opencv/sdk/native/jni/: OpenCVConfig.cmake  OpenCVModules_arm64_v8a-release.cmake  OpenCVModules_arm64_v8a.cmake
app/src/main/cpp/android_lib/protobuf/lib/cmake/protobuf/: protobuf-config-version.cmake
app/src/main/cpp/glog/: .gitignore
app/src/main/java/com/sh1r0/caffe_android_demo/: MainActivity.java  PermissionUtils.java
